Changelog
=========

2.13.4 (unreleased)
-------------------

- Nothing changed yet.


2.13.3 (2019-04-03)
-------------------

- Add ability to disable sending of queued mails. Details see README.txt.
  (`#14 <https://github.com/zopefoundation/Products.MailHost/issues/14>`_)


2.13.2 (2014-11-02)
-------------------

- Adjust tests to pass with latest zope.sendmail versions.

- Specify detailed distribution dependencies.

2.13.1 (2010-09-25)
-------------------

- LP #642728: Fixed TypeError on nested multi part messages in MailHost.

2.13.0 (2010-07-13)
-------------------

- Released as separate package.