@@ -176,14 +176,6 @@ class MailBase(Implicit, Item, RoleManager):
         self.smtp_queue = smtp_queue
         self.smtp_queue_directory = smtp_queue_directory
 
-        # restart queue processor thread
-        if self.smtp_queue:
-            self._stopQueueProcessorThread()
-            self._startQueueProcessorThread()
-        else:
-            self._stopQueueProcessorThread()
-
-
         if REQUEST is not None:
             msg = 'MailHost %s updated' % self.id
             return self.manage_main(self, REQUEST, manage_tabs_message=msg)
